# volga_it_2024_semi-final

./: .gitignore  Makefile  README.md  myREADME.md  pyproject.toml  requirements.txt
account/: Makefile  alembic.ini  requirements.txt  test.py
account/app/: main.py  schemas.py
account/cert/: README.md
account/core/: config.py
account/src/: main.py  models.py  routes_accounts.py  routes_authentication.py  routes_doctor.py  schemas.py  test.py
account/src/api/: user_crud.py
account/src/models/: base.py  db_helper.py  role.py  user.py  user_role.py
account/src/routes/: routes_accounts.py  routes_authentication.py
account/src/schemas/: schemas.py
cert/: jwt-private.pem  jwt-publick.pem
document/: Makefile
document/src/: main.py
history/src/: main.py
hospinals/app/: main.py  routes.py
hospitals/: requirements.txt
timetable/app/: routes.py
timetable/src/: main.py
