[tool.poetry]
name = "simbirsoft"
version = "0.1.0"
description = ""
authors = ["Irina Ponakshina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.31.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
